--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Zhongwei Xie 谢中伟's Homepage"
+title                    : "Zhongwei Xie's Homepage"
 description              : "Cat Lovers"
 repository               : "zhongweixie/zhongweixie.github.io"
 google_scholar_stats_use_cdn : true
