--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Zhongwei Xie 谢中伟"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/xzw.jpg"
   bio              : 
   location         : "Clear Water Bay, HK"
   employer         :
