--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Zhongwei Xie's Homepage"
-description              : "Cat Lovers"
+description              : "Believe in miracles happening"
 repository               : "zhongweixie/zhongweixie.github.io"
 google_scholar_stats_use_cdn : true
 
