--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Zhongwei Xie 谢中伟"
   avatar           : "images/xzw.jpg"
   bio              : 
-  location         : "Clear Water Bay, HK"
+  location         : 
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=MSeo7iMAAAAJ"
