--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,7 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Miscellaneous"
+    url: "/#-miscellaneous"
 
-  - title: "Internships"
-    url: "/#-internships"
+
